fix: Add paragraph spacing

--- a/src/components/GoogleParser/GoogleParser.module.scss
+++ b/src/components/GoogleParser/GoogleParser.module.scss
@@ -1,3 +1,4 @@
 .paragraph {
   color: var(--white);
+  margin-bottom: 20px;
 }
